--- a/index.html
+++ b/index.html
@@ -167,19 +167,26 @@
 <div class="menu">
   <a rel="follow" title="Sponsors" href="www/sponsors.html">Sponsors:</a>
 
-  <a href="http://www.networkredux.com"> <img src="images/networkredux.png" width="140" height="31" alt="[sponsor]" style="margin-top: 4px; margin-left: 4px; border: 0px; float: left;" /></a>
+ <a href="http://www.networkredux.com"> <img src="images/networkredux.png" width="140" height="31" alt="[sponsor]" style="margin-top: 4px; margin-left: 4px; border: 0px; float: left;" /></a>
+  <a href="http://www.dinodirect.com/ipads-tablets/"> <img src="images/dino-direct.jpg" width="140" height="90" alt="[sponsor]" style="margin-top: 4px; margin-left: 4px; border: 0px; float: left;" /></a><!-- 201305010150 mickey@163... -->
 <div class="sponsbox">
-<div class="sponsor">
-  <a rel="follow" title="Cheap Webhost Provider" href="http://cheapwebhostingprovider.com">Cheap Webhost Provider</a><!-- 201301010180 paypal@aff...label... -->
+<div  class="sponsor">
+   <a rel="follow" title="Cheap Web Host Provider" href="http://cheapwebhostingprovider.com">Cheap Web Host Provider</a><!-- 2013170100150 affiliatelabel...-->
 </div>
 <div class="sponsor">
-  <a rel="follow" title="Werbebanner Werbeplane" href="http://www.druck-expert.com/Werbebanner-Werbeplane-Geruestbanner,category,8552.html">Werbebanner Werbeplane</a><!-- 201312010450 info@druck... -->
+  <a rel="follow" title="Android Tablet" href="http://www.dinodirect.com/ipads-tablets/">Android Tablet</a><!-- 201305010120 mickey@163... -->
+</div>
+<div class="sponsor">
+  <a rel="follow" title="Druckerei" href="http://www.druck-expert.com">Druckerei</a><!-- 201406010450 info@druck... -->
+</div>
+<div class="sponsor">
+  <a rel="follow" title="Werbebanner" href="http://www.druck-expert.com/Werbebanner-Werbeplane-Geruestbanner,category,8552.html">Werbebanner</a><!-- 201406010450 info@druck... -->
+</div>
+<div class="sponsor">
+   <a rel="follow" title="Images API" href="http://www.imagesapi.com">Images API</a><!-- 2013040100150 graphicsfac...-->
 </div>
 <div  class="sponsor">
-   <a rel="follow" title="Foto Leinwand Bilder" href="http://www.druck-expert.com/Foto-auf-Leinwand-Bild-Leinwanddruck,category,1582.html">Foto Leinwand Bilder</a><!-- 2013100100450 info@druck...-->
-</div>
-<div  class="sponsor">
-   <a rel="follow" title="Fernsehdienst Berlin" href="http://www.atlas-multimedia.de">Fernsehdienst Berlin</a><!-- 2013020100030 atlas-multimedia-->
+   <a rel="follow" title="Servietten" href="http://www.druck-expert.com/Servietten-Serviettendruck-Foto-Serviette,category,1530.html">Servietten</a><!-- 2014060100030 info@druck...-->
 </div>
 </div>
 </div>
@@ -222,7 +229,7 @@
 
 <p>The ImageMagick development process ensures a stable API and ABI. Before each ImageMagick release, we perform a comprehensive security assessment that includes <a href="http://www.valgrind.org">memory and thread</a> error detection to prevent security vulnerabilities.</p>
 
-<p>The current release is ImageMagick 6.8.1-1.</p>
+<p>The current release is ImageMagick 6.8.2-0.</p>
 
 </div>
 
@@ -257,6 +264,7 @@
   <li><a href="www/architecture.html#virtual-pixels">Virtual pixel support</a>: convenient access to pixels outside the image region.</li>
   <li><a href="www/architecture.html#tera-pixel">Large image support</a>: read, process, or write mega-, giga-, or tera-pixel image sizes.</li>
   <li><a href="www/architecture.html#threads">Threads of execution support</a>: ImageMagick is thread safe and most internal algorithms execute in <a href="www/parallel.html">parallel</a> to take advantage of speed-ups offered by multicore processor chips.</li>
+  <li><a href="www/distribute-pixel-cache.html">Distributed pixel cache</a>: offload intermediate pixel storage to one or more remote servers.</li>
   <li><a href="www/architecture.html#distributed">Heterogeneous distributed processing</a>: certain algorithms are <a href="http://www.khronos.org/opencl/">OpenCL</a>-enabled to take advantage of speed-ups offered by executing in concert across heterogeneous platforms consisting of CPUs, GPUs, and other processors.</li>
   <li><a href="www/binary-releases.html#iOS">ImageMagick on the iPhone</a>: convert, edit, or compose images on your <a href="http://www.apple.com/ios/">iOS</a> comuting device such as the iPhone or iPad.</li>
 </ul>
