--- a/www/advanced-windows-installation.html
+++ b/www/advanced-windows-installation.html
@@ -578,7 +578,7 @@
   </div>
   <div class="footer">
     <span id="footer-west">&copy; 1999-2011 ImageMagick Studio LLC</span>
-    <span id="footer-east"> <a href="http://www.imagemagick.org/script/contact.php">Contact the Wizards</a></span>
+    <span id="footer-east"> <a href="http://www.imagemagick.org/www/contact.html">Contact the Wizards</a></span>
   </div>
   <div style="clear: both; margin: 0; width: 100%; "></div>
   <script type="text/javascript">
