--- a/www/sitemap.html
+++ b/www/sitemap.html
@@ -322,7 +322,7 @@
     <dd><a href="http://common-lisp.net/project/cl-magick/">CL-Magick</a>: provides a Common Lisp interface to the ImageMagick library.</dd>
     <dd><a href="https://gna.org/projects/g2f/">G2F</a>: implements an Ada 95 binding to a subset of the low-level MagickCore library.</dd>
     <dd><a href="../Magick++">Magick++</a>: provides an object-oriented C++ interface to ImageMagick.</dd>
-    <dd><a href="http://pecl.php.net/package/imagick">IMagick</a>: is a native PHP extension to create and modify images using the ImageMagick API.</dd>
+    <dd><a href="http://pecl.html.net/package/imagick">IMagick</a>: is a native PHP extension to create and modify images using the ImageMagick API.</dd>
     <dd><a href="http://www.yeo.id.au/jmagick/">JMagick</a>: provides an object-oriented Java interface to ImageMagick.</dd>
     <dd><a href="magick-core.html">MagickCore</a>: C API, recommended for wizard-level developers.</dd>
     <dd><a href="magick-wand.html">MagickWand</a>: convert, compose, and edit images from the C language.</dd>
@@ -363,7 +363,7 @@
 <div class="doc-section">
 
 <dl>
-  <dd><a href="http://www.imagemagick.org/discourse-server/viewforum.php?f=3">Report bugs and vulnerabilities</a>: our highest priority is to fix security defects and bug reports, usually within 48 hours of your report.  The bug discourse server requires that you register.  If you do not want to register, you can <a href="contact.html">contact the ImageMagick developers</a> with a convenient web form.</dd>
+  <dd><a href="http://www.imagemagick.org/discourse-server/viewforum.html?f=3">Report bugs and vulnerabilities</a>: our highest priority is to fix security defects and bug reports, usually within 48 hours of your report.  The bug discourse server requires that you register.  If you do not want to register, you can <a href="contact.html">contact the ImageMagick developers</a> with a convenient web form.</dd>
   <dd><a href="sponsors.html">Sponsor ImageMagick</a>: contribute bug fixes, enhancements, hardware, funds, etc. to ensure the ImageMagick project thrives.</dd>
   <dd><a href="t-shirt.html">ImageMagick t-shirt</a>: donate $25 USD and we acknowledge your gift with a logoed t-shirt.</dd>
 </dl>
